--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 results/gp_simulations/manuscript.zip filter=lfs diff=lfs merge=lfs -text
 data/string_q_matrices_fame__bacterial.zip filter=lfs diff=lfs merge=lfs -text
+data/fame__bacterial_tree_distances.feather filter=lfs diff=lfs merge=lfs -text
