--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 results/gp_simulations/manuscript.zip filter=lfs diff=lfs merge=lfs -text
 data/string_q_matrices_fame__bacterial.zip filter=lfs diff=lfs merge=lfs -text
 data/fame__bacterial_tree_distances.feather filter=lfs diff=lfs merge=lfs -text
+data/string_q_matrices_ravel.zip filter=lfs diff=lfs merge=lfs -text
